--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <header>
     <img class="header__logo" src="img/logo.svg">
     <div class="header__controls">
-        <a href="contect">Контакты</a>
+        <a href="contact">Контакты</a>
         <button>Заказать</button>
     </div>
 </header>
     <section class="about">
         <div class="about__info">
             <h1>Солнечные панели GreenRobotic</h1>
-            <p>Производите дешевую экологчески чистую электроэнергию</p>
+            <p>Производите дешевую экологчески чистую электроэнергию из солнечного света</p>
             <button>Узнать подробнее</button>
         </div>
       <div class="about__images">
@@ -24,5 +24,63 @@
       <img class="about__image" src="img/solar-panel.png">
     </div>
     </section>
+    <section class="form">
+        <div class="form__container">
+            <h1>Оставьте свои контакты</h1>
+            <p>Поможем подобрать модель. <br> Выбрать удоабный вариант доставки и установки. <br> Гарантия возврата денег.</p>
+            <form>
+                <div class="form__group">
+                    <label for="name">Ваше имя</label>
+                    <input type="text" placeholder="Введите имя" id="name">
+                </div>
+                <div class="form__group">
+                    <label for="email">Электронный адрес</label>
+                    <input type="email" placeholder="***@yandex.ru" id="email">
+                </div>
+                <div class="form__group"> 
+                    <label for="phone">Номер телефона</label>
+                    <input type="tel" placeholder="7(999)999-99-99" id="phone">
+                </div>
+                <div class="form__budget">
+                    <label for="budget">Примерный бюджет</label>
+                    <select id="budget">
+                        <option selected>Выберите вариант</option>
+                        <option value="10-30">10 000₽ - 30 000₽</option>
+                        <option value="30-60">30 000₽ - 60 000₽</option>
+                        <option value="60-100">60 000₽ - 100 000₽</option>
+                        <option value="100+">100 000₽</option>
+                    </select>
+                </div>
+            <input type="button" class="form__submit" value="Отправить заявку">
+    </div>
+    </section>
+    <footer>
+        <div class="footer__container">
+            <div class="footer__group">
+                <h3>Позвонить нам</h3>
+                    <div class="footer__links">
+                <a href="tel:7(999)999-99-99">+7 (999) 999-99-99</a>
+                    </div>
+                    </div>
+            <div class="footer__group">
+                <h3>Решения для дома</h3>
+                    <div class="footer__links">
+                <a href="paneli">Солнечные панели GreenRobotic</a>
+                <a href="paneli">Системы солнечных панелей GreenStation</a>
+                    </div>
+                     </div>
+            <div class="footer__group">
+                <h3>Компания</h3>
+                    <div class="footer__links">
+                <a href="#">Контакты</a>
+                <a href="#">Вакансии</a>
+                <a href="#">СМИ</a>
+                    </div>
+                    </div>
+        </div>
+        <div class="footer__copyright">
+            <p>GreenCorp © 2024</p>
+        </div>
+    </footer>
     </body>
 </html> 
